Remove fixed positioning from header in smallest screen widths
Takes up too much valuable space

--- a/css/textpattern.css
+++ b/css/textpattern.css
@@ -2049,6 +2049,9 @@ div.plugin-help {
     padding-top: 4em;
   }
 
+  #txp-head {
+    position: absolute;
+  }
   #txp-head h1 {
     max-width: 66%;
   }
