--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -341,6 +341,7 @@ body {
 }
 
 #txp-head {
+    position: absolute;
     h1 {
         max-width: 66%;
     }
